# phoxi_camera_ros2

./: README.md
phoxi_camera/: CMakeLists.txt  package.xml
phoxi_camera/include/phoxi_camera/: RosConversions.h  ros_Interface.hpp  ros_interface.hpp
phoxi_camera/launch/: phoxi_camera_launch.py
phoxi_camera/src/: RosInterface.cpp  phoxi_camera_node.cpp
phoxi_msgs/: CMakeLists.txt
phoxi_msgs/action/: Trigger.action
phoxi_msgs/msg/: DeviceInformation.msg
